tests/NormalTests/paczka1/fuzzy1/87353358.err
Error in line 4: KKuHHCp S54 78,1
Error in line 9: KKuHHCp A622 69,4
Error in line 7: Kfw36N A501 236,1
Error in line 16: SG47s A501 19,39
Error in line 17: obdyXCuylz7 A622 82,S
Error in line 13: rvYQyQYS A622 57,1
Error in line 24: rvYQyQYS A501 12,7
Error in line 33: A145 A501 6,6
